# OpenGLED

./: .gitmodules  CMakeLists.txt  README.md  example-config.yaml  main.cpp
include/: CircularBuffer.h  OpenGLEDConfig.h  RaspiHeadlessOpenGLContext.h  Shader.h
shaders/: wavey.fs
src/: OpenGLEDConfig.cpp  RaspiHeadlessOpenGLContext.cpp  Shader.cpp  main.cpp
